hashCode / equals - overall review & cleanup