@@ -10,7 +10,7 @@ import java.util.List;
 import java.util.StringTokenizer;
 
 public class ExecutionBacktraceInfo implements CallableStatementOutput {
-    private List<DebuggerRuntimeInfo> frames = new ArrayList<DebuggerRuntimeInfo>();
+    private final List<DebuggerRuntimeInfo> frames = new ArrayList<>();
 
     public List<DebuggerRuntimeInfo> getFrames() {
         return frames;
@@ -30,14 +30,14 @@ public class ExecutionBacktraceInfo implements CallableStatementOutput {
             frameNumber++;
             String backtraceEntry = tokenizer.nextToken();
             int dotIndex = backtraceEntry.indexOf('.');
-            DebuggerRuntimeInfo runtimeInfo = null;
+            DebuggerRuntimeInfo runtimeInfo;
             if (dotIndex > 0) {
                 int nameEndIndex = backtraceEntry.indexOf(' ', dotIndex);
                 String ownerName = backtraceEntry.substring(0, dotIndex);
                 String programName = backtraceEntry.substring(dotIndex + 1, nameEndIndex);
                 int lineNumberEndIndex = backtraceEntry.indexOf(' ', nameEndIndex + 1);
-                Integer lineNumber = new Integer(backtraceEntry.substring(nameEndIndex + 1, lineNumberEndIndex));
-                Integer namespace = new Integer(backtraceEntry.substring(lineNumberEndIndex + 1));
+                Integer lineNumber = Integer.valueOf(backtraceEntry.substring(nameEndIndex + 1, lineNumberEndIndex));
+                Integer namespace = Integer.valueOf(backtraceEntry.substring(lineNumberEndIndex + 1));
 
                 runtimeInfo = new DebuggerRuntimeInfo(ownerName, programName, namespace, lineNumber);
                 runtimeInfo.setFrameIndex(frameNumber);
@@ -45,8 +45,8 @@ public class ExecutionBacktraceInfo implements CallableStatementOutput {
 
             } else if (frames.size() == 0){
                 int lineNumberEndIndex = backtraceEntry.indexOf(' ');
-                Integer lineNumber = new Integer(backtraceEntry.substring(0, lineNumberEndIndex));
-                Integer namespace = new Integer(backtraceEntry.substring(lineNumberEndIndex + 1));
+                Integer lineNumber = Integer.valueOf(backtraceEntry.substring(0, lineNumberEndIndex));
+                Integer namespace = Integer.valueOf(backtraceEntry.substring(lineNumberEndIndex + 1));
 
                 runtimeInfo = new DebuggerRuntimeInfo(null, null, namespace, lineNumber);
                 runtimeInfo.setFrameIndex(frameNumber);
